# water-fast-clone

./: .gitattributes  .gitignore  README.md  apartamentos.json  app.py  calculate.py  dashboard_conta_agua.py  main.py  pyproject.toml  requirements-3.14.txt  requirements.txt
.github/workflows/: generate-requirements  generate-requirements.yml
stash/: README.md  dashboard_conta_agua.py  dashboard_num_resid.py  dashboard_with_auth.py
