[project]
name = "water-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "pandas>=2.3.0",
    "plotly-express>=0.4.1",
    "pydantic>=2.11.7",
    "streamlit==1.32.0",
]
